# Thoughtspread

./: .gitignore  Build.sh  Main.hs  SdntDB.sqlite3  Start.sh  Thoughtspread.cabal
Resources/Elm/: YoYo.elm
TS/: App.hs  Logic.hs  Utils.hs
TS/Page/: Caesar.hs  Home.hs  PRAC.hs  PRACResults.hs  PRADB.hs  PRADBAdd.hs  PRADBAuth.hs  PRADBAward.hs  PRADBAwards.hs  PRADBCResult.hs  PRADBClub.hs  PRADBSearch.hs  PRADBStudent.hs  Theme.hs  YoYo.hs
