name:               Thoughtspread
version:            1.0.1
cabal-version:      >= 1.8
build-type:         Simple

executable          Thoughtspread
  main-is:          Main.hs
  other-Modules:    TS.Logic
                  , TS.Utils
                  , TS.App
                  , TS.Page.Home
                  , TS.Page.Theme
                  , TS.Page.Caesar
                  , TS.Page.YoYo
                  , TS.Page.PRAC
                  , TS.Page.PRACResults
  extensions:       EmptyDataDecls
                  , FlexibleContexts
                  , FunctionalDependencies
                  , GeneralizedNewtypeDeriving
                  , MultiParamTypeClasses
                  , OverloadedStrings
                  , DeriveGeneric
                  , QuasiQuotes
                  , RecordWildCards
                  , TemplateHaskell
                  , TypeFamilies
  build-depends:    base
                  , transformers
                  , bytestring
                  , cryptohash
                  , blaze-markup
                  , yaml
                  , yesod
                  , yesod-static
                  , text

  ghc-options:    -fwarn-tabs -threaded -O2 -rtsopts -with-rtsopts=-N
