name:               Thoughtspread
version:            1.6.0
cabal-version:      >= 1.8
build-type:         Simple

executable          Thoughtspread
  main-is:          Main.hs
  other-Modules:    TS.Logic
                  , TS.Utils
                  , TS.App
                  , TS.Page.Home
                  , TS.Page.Theme
                  , TS.Page.Caesar
                  , TS.Page.YoYo
                  , TS.Page.PRADB
                  , TS.Page.PRADBClub
                  , TS.Page.PRADBCResult
                  , TS.Page.PRADBAdd
                  , TS.Page.PRADBSearch
                  , TS.Page.PRADBAward
                  , TS.Page.PRADBStudent
  extensions:       EmptyDataDecls
                  , FlexibleContexts
                  , FunctionalDependencies
                  , GeneralizedNewtypeDeriving
                  , MultiParamTypeClasses
                  , OverloadedStrings
                  , DeriveGeneric
                  , QuasiQuotes
                  , RecordWildCards
                  , TemplateHaskell
                  , TypeFamilies
                  , ViewPatterns
                  , GADTs
  build-depends:    base
                  , transformers
                  , resourcet
                  , monad-logger
                  , bytestring
                  , containers
                  , cryptohash
                  , blaze-markup
                  , yesod
                  , yesod-static
                  , persistent
                  , persistent-template
                  , persistent-sqlite
                  , text
                  , time

  ghc-options:    -fwarn-tabs -threaded -O2 -rtsopts -with-rtsopts=-N
